ghc-4335c07/testsuite/tests/typecheck/should_fail/T13821B.bkp
{-# LANGUAGE MagicHash #-}
unit T13821B where
  signature A where
    import GHC.Prim

    x :: Int#